src/styles/_defaults.scss
@use "_variables" as *;

html {
  position: relative;
  min-height: 100%;
}

body {
  background-color: $template-color;
  color: $template-color-opposing;
  font: normal 1.2rem $template-default-font;
}

main {
  padding: 0;
  max-width: 1024px;
  min-height: calc(100vh - 380px);
  margin: 0 auto;
}

body.dark .astro-code,
body.dark .astro-code span {
  color: var(--shiki-dark) !important;
  background-color: var(--shiki-dark-bg) !important;
}

:not(pre) > code {
  background: $template-color-code-block;
  padding: 1px 3px;
  border-radius: 5px;
}

.button {
  p {
    margin: 0;
    padding: 0;
  }
}

a {
  color: $template-color-accent;
  &:hover {
    filter: brightness(0.85);
  }
}

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

noscript {
  text-align: center;
  display: block;
  margin-bottom: 25px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $template-header-font;
  a {
    text-decoration: none;
    color: $template-color-opposing;

    &::before {
      font-family: "Font Awesome 6 Free";
      font-size: 1rem;
      vertical-align: middle;
      margin-right: 5px;
    }

    &:hover::before {
      text-decoration: none;
      content: "\f0c1";
    }
  }
}

blockquote {
  font-family: $template-header-font;
  font-style: italic;
  text-align: center;
  margin: 60px 0;
}

.center-text {
  text-align: center;
}

.pagination {
  text-align: center;
  font-size: 1.5em;
  font-family: $template-header-font;

  a {
    margin: 5px;
    text-decoration: none;
    transition: scale 0.2s ease-in-out;
    display: inline-block;

    &:hover {
      transform: scale(1.1, 1.1);
    }
  }
}

/* Code block formatting */
pre {
  background-color: $template-color-code-block;
  padding: 20px;
  border-radius: 5px;
  overflow-x: scroll;
}

[data-icon] {
  height: auto;
  width: auto;
}

#wcb.carbonbadge {
  --b1: var(--template-color-accent) !important;
  --b2: var(--template-color-accent) !important;
}

kbd {
  display: inline-block;
  padding: 4px;
  font-size: 14px;
  color: $template-color-accent !important;
  vertical-align: middle;
  background-color: $template-color !important;
  border: solid 1px $template-color-accent !important;
  border-bottom-color: $template-color-accent !important;
  border-radius: 6px;
  box-shadow: inset 0 -1px 0 $template-color-accent !important;
}

:focus {
  outline: none;
}

:focus-visible {
  outline: 1px solid color-mix(in lch, var(--template-color-accent) 50%, black);
  box-shadow: 0 0 0 3px
    color-mix(in lch, var(--template-color-accent) 50%, black);
}

